--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <network-security-config>
-  <base-config cleartextTrafficPermitted="true">
+  <base-config cleartextTrafficPermitted="false">
     <trust-anchors>
       <certificates src="system" />
     </trust-anchors>
   </base-config>
-  <domain-config cleartextTrafficPermitted="false">
-    <!-- Aquí va solo el dominio sin https:// -->
-    <domain includeSubdomains="true">api.synsa.com.py</domain>
+
+  <domain-config cleartextTrafficPermitted="true">
+    <domain includeSubdomains="true">http://192.168.0.100</domain>
   </domain-config>
 </network-security-config>
