--- a/src/app/paginas/welcome/welcome.page.scss
+++ b/src/app/paginas/welcome/welcome.page.scss
@@ -1,54 +1,26 @@
-.container{
-  align-content: center;
-  display: block;
-  position: relative;
-  top: 35px;
+/* Animación para el contenido */
+.container div {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
 }
 
-.logo {
-  margin-top: 8px;
-  height: 100px;
+.container div:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.container div:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.container div:nth-child(3) {
+  animation-delay: 0.6s;
 }
 
-.logo-container {
-  margin-bottom: 20px;
-}
-
-/*.logo {
-    width: 150px;
-    height: auto;
-  }*/
-
-.welcome-message {
-  font-size: 24px;
-  font-weight: bold;
-  margin: 20px 0;
-}
-
-.description {
-  font-size: 16px;
-  margin-bottom: 40px;
-}
-
-.action-button {
-  --background: #007BFF;
-  /* Azul */
-  --background-hover: #0056b3;
-  /* Azul más oscuro */
-  --background-activated: #004085;
-  /* Azul aún más oscuro */
-  --background-focused: #003366;
-  /* Azul muy oscuro */
-  border-radius: 20px;
-  margin: 10px 0;
-}
-
-ion-button[fill="outline"] {
-  --border-color: #007BFF;
-  /* Azul */
-  --color: #007BFF;
-  /* Azul */
-  --background: transparent;
-  --background-hover: rgba(0, 123, 255, 0.1);
-  /* Azul con transparencia */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
