--- a/src/app/paginas/clientes/clientes/clientes.page.html
+++ b/src/app/paginas/clientes/clientes/clientes.page.html
@@ -46,9 +46,10 @@
     </ion-card>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="fab-adjusted">
     <ion-fab-button color="success" (click)="openEditClienteModal(0)">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
