--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -6,7 +6,13 @@
     </trust-anchors>
   </base-config>
 
+
   <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">192.168.0.100</domain>
+    <domain includeSubdomains="true">10.0.2.2</domain>
+  </domain-config>
+
+
+  <domain-config cleartextTrafficPermitted="false">
+    <domain includeSubdomains="true">api.synsa.com.py</domain>
   </domain-config>
 </network-security-config>
