--- a/src/app/paginas/usuarios/usuarios.page.html
+++ b/src/app/paginas/usuarios/usuarios.page.html
@@ -1,9 +1,6 @@
 <ion-content class="ion-padding ion-text-center" style="background: linear-gradient(to bottom, #E3F2FD, #BBDEFB);">
   <!-- Fondo con líneas sutiles -->
-  <div
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: url('../../../assets/img/lineas-geometricas.svg') repeat center center; background-size: 50px 50px; opacity: 0.1;">
-  </div>
-
+  <div class="background-lines" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.1) 75%), linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.1) 75%); background-size: 40px 40px; z-index: -1;"></div>
   <!-- Contenedor del logo -->
   <div class="logo-container" style="width: 100%; overflow: hidden;">
     <img src="../../../assets/img/logo.png" class="logo"
