--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
+
   <base-config cleartextTrafficPermitted="false">
     <trust-anchors>
       <certificates src="system" />
     </trust-anchors>
   </base-config>
 
-
-  <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">10.0.2.2</domain>
-  </domain-config>
-
-
   <domain-config cleartextTrafficPermitted="false">
     <domain includeSubdomains="true">api.synsa.com.py</domain>
+    <trust-anchors>
+      <certificates src="system" />
+    </trust-anchors>
   </domain-config>
+
 </network-security-config>
